--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>VersaStyle</title>
@@ -35,7 +36,7 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Mas
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu color" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="./pages/envios.html">Envios</a></li>
                                 <li><a class="dropdown-item" href="./pages/usuario.html">Usuario</a></li>
                                 <li><a class="dropdown-item" href="./pages/acercade.html">Acerca De</a></li>
@@ -72,7 +73,7 @@
                     <h2>Pantalones</h2>
                     <a href="#">VER MAS</a>
                 </div>
-                
+
                 <div class="card">
                     <img src="./img/Zapatillas.jpg" alt="Pantalones">
                     <h2>Zapatillas</h2>
