--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>VersaStyle</title>
@@ -86,31 +87,13 @@
         <section class="contenedor">
             <h2 class="Titulo">Cuidado de prendas:</h2>
             <div class="contenedorContainer">
-                <p class="contenedorTexto">Cuidar nuestras prendas es fundamental si queremos que luzcan como nuevas
-                    durante más tiempo. Sin embargo, a veces no sabemos exactamente qué debemos hacer para evitar que se
-                    desgasten o estropeen rápidamente. Aquí te presento algunos tips útiles que te ayudarán a mantener
-                    tus prendas en excelente estado:</p>
+                <p class="contenedorTexto">Cuidar nuestras prendas es fundamental si queremos que luzcan como nuevas durante más tiempo. Sin embargo, a veces no sabemos exactamente qué debemos hacer para evitar que se desgasten o estropeen rápidamente. Aca te presento algunos tips útiles que te ayudarán a mantener tus prendas en excelente estado:</p>
                 <ol class="contenedorLista">
-                    <li>Lava tus prendas en agua fría: El agua caliente puede encoger y estropear las fibras de las
-                        prendas. Por lo tanto, siempre que sea posible, lava tus prendas en agua fría. Además, esto
-                        también te ayudará a ahorrar energía, ya que el agua caliente consume más energía que el agua
-                        fría.</li>
-                    <li>Separa tus prendas por color: Asegúrate de separar tus prendas por color antes de lavarlas. Las
-                        prendas de colores oscuros pueden manchar o desteñir las prendas de color claro, por lo que es
-                        importante lavarlas por separado. Además, si tienes prendas con estampados, asegúrate de
-                        lavarlas junto con prendas de colores similares para evitar que se decoloren.</li>
-                    <li>Usa detergentes suaves: Los detergentes agresivos pueden dañar las fibras de las prendas y hacer
-                        que pierdan su color. Por lo tanto, es mejor usar detergentes suaves y amigables con el medio
-                        ambiente que no contengan productos químicos agresivos. También puedes optar por detergentes
-                        especialmente diseñados para prendas delicadas.</li>
-                    <li>Evita la secadora a altas temperaturas: El calor de la secadora puede encoger las prendas y
-                        hacer que las fibras se desgasten más rápidamente. Si es posible, cuelga tus prendas para
-                        secarlas al aire libre o en una percha dentro de la casa. Si debes usar la secadora, asegúrate
-                        de usar una temperatura baja o media.</li>
-                    <li>Plancha según las instrucciones: Planchar las prendas correctamente puede hacer que luzcan como
-                        nuevas y prolongar su vida útil. Sin embargo, es importante seguir las instrucciones de la
-                        etiqueta de cuidado para evitar dañar las fibras de las prendas. Si no estás seguro de la
-                        temperatura adecuada, prueba primero en una zona poco visible de la prenda.</li>
+                    <li>1. Lava tus prendas en agua fría: El agua caliente puede encoger y estropear las fibras de las prendas. Por lo tanto, siempre que sea posible, lava tus prendas en agua fría. Además, esto también te ayudará a ahorrar energía, ya que el agua caliente consume más energía que el agua fría.</li>
+                    <li>2. Separa tus prendas por color: Asegúrate de separar tus prendas por color antes de lavarlas. Las prendas de colores oscuros pueden manchar o desteñir las prendas de color claro, por lo que es importante lavarlas por separado. Además, si tienes prendas con estampados, asegúrate de lavarlas junto con prendas de colores similares para evitar que se decoloren.</li>
+                    <li>3. Usa detergentes suaves: Los detergentes agresivos pueden dañar las fibras de las prendas y hacer  que pierdan su color. Por lo tanto, es mejor usar detergentes suaves y amigables con el medio ambiente que no contengan productos químicos agresivos. También puedes optar por detergentes  especialmente diseñados para prendas delicadas.</li>
+                    <li>4. Evita la secadora a altas temperaturas: El calor de la secadora puede encoger las prendas y hacer que las fibras se desgasten más rápidamente. Si es posible, cuelga tus prendas para secarlas al aire libre o en una percha dentro de la casa. Si debes usar la secadora, asegúrate de usar una temperatura baja o media. <li>
+                    <li>5. Plancha según las instrucciones: Planchar las prendas correctamente puede hacer que luzcan comonuevas y prolongar su vida útil. Sin embargo, es importante seguir las instrucciones de la etiqueta de cuidado para evitar dañar las fibras de las prendas. Si no estás seguro de la temperatura adecuada, prueba primero en una zona poco visible de la prenda.</li>
                 </ol>
             </div>
         </section>
