--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>VersaStyle</title>
@@ -48,7 +49,7 @@
     <main class="usuarioFondo">
 
         <section class="usuario">
-            <h2>Registrate</h2>
+            <h2 class="usuarioRegistrate">Registrate</h2>
             <div class="usuarioTarget">
                 <p>Si te vuelves usuario de VersaStyle tendras distintas ventajas como poder recibir promociones en la tienda enviadas directamente a tu mail</p>
                 <form action="" method="" enctype="" class="usuarioTargetRespuesta">
@@ -71,12 +72,11 @@
                         <label for="confirmar contraseña">Confirmar contraseña</label>
                         <input type="password" name="confirmar contraseña" id="confirmar contraseña">
                     </div>
-                    <div>
+                    <div class="usuarioTargetRespuestaBoton">
                         <input type="submit">
                         <input type="reset">
                     </div>
                 </form>
-    
             </div>
         </section>
 
@@ -91,9 +91,9 @@
             <a href="#">Zapatillas</a>
         </nav>
         <nav class="footerMenu">
-            <h3>Sobre nosotros</h3>
-            <a href="#">Nuestra Historia</a>
-            <a href="#">Mision, Vision y Valores</a>
+                        <h3>Sobre nosotros</h3>
+                        <a href="#">Nuestra Historia</a>
+                    <a href="#">Mision, Vision y Valores</a>
             <a href="#">Carreras</a>
             <a href="#">Politicas de Privacida</a>
             <a href="#">Terminos del Servicio</a>
