--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--* flavicon -->
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>VersaStyle</title>
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--* KEYWORDS -->
+    <meta name="keywords" content="ropa, remeras, pantalones, zapatillas, street, vestir, vestimenta, cloth, buenos aires, capital, caba, ciudad de buenos aires, versastyle, envios gratis">
+    <!--* DESCRIPTION -->
+    <!-- Entre 70 a 320 caracteres / 180 caracteres es lo justo-->
+    <meta name="description" content="">
+    <!--* PROTOCOLO OPEN GRAPH -->
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="VersaStyle - Venta de Indumentaria Buenos Aires Capital">
+    <meta property="og:url" content="dominio url">
+    <meta property="og:image" content="www">
+    <meta property="og:description" content="">
+    <title>VersaStyle - Indumentaria Buenos Aires Capital</title>
 </head>
 
 <body>
@@ -47,16 +59,12 @@
             </div>
         </nav>
     </header>
-
-
-
-
     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <main>
         <section class="hero">
             <div>
-                <p>Moda confortable para un estilo de vida activo</p>
-                <h2>Fundada en 2015</h2>
+                <p class="heroFrase">Moda confortable para un estilo de vida activo</p>
+                <h2 class="heroTitulo">Fundada en 2023</h2>
             </div>
         </section>
 
@@ -110,11 +118,9 @@
             <p>Copyright 2023 © VersaStyle - Powered by Ecomerciar</p>
         </div>
     </footer>
-    <!-- ----------
-    <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------BOOSTRAP JS- -->
+    <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------BOOSTRAP JS- -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
