--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--* flavicon -->
-    <link rel="shortcut icon" href="" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--* FAVICON -->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <!--* KEYWORDS -->
     <meta name="keywords" content="ropa, remeras, pantalones, zapatillas, street, vestir, vestimenta, cloth, buenos aires, capital, caba, ciudad de buenos aires, versastyle, envios gratis">
     <!--* DESCRIPTION -->
-    <!-- Entre 70 a 320 caracteres / 180 caracteres es lo justo-->
-    <meta name="description" content="">
+    <!--* Entre 70 a 320 caracteres / 180 caracteres es lo justo (yo no sabia que poner toavia)-->
+    <meta name="description" content="En VersaStyle encontraras el estilo adecuado, envio gratis a todo el pais!">
     <!--* PROTOCOLO OPEN GRAPH -->
     <meta property="og:type" content="Web Site">
     <meta property="og:title" content="VersaStyle - Venta de Indumentaria Buenos Aires Capital">
-    <meta property="og:url" content="dominio url">
-    <meta property="og:image" content="www">
-    <meta property="og:description" content="">
+    <meta property="og:url" content="https://github.com/StefanoVRS/ProyectoCoder.git">
+        <!-- no tengo la imagen subida asi que lo pongo dese archivos por ahora -->
+    <meta property="og:image" content="file:///C:/Users/Stefi/Desktop/PROYECTO/img/apple-touch-icon.png"> 
+    <meta property="og:description" content="En VersaStyle encontraras el estilo adecuado, envio gratis a todo el pais!">
     <title>VersaStyle - Indumentaria Buenos Aires Capital</title>
 </head>
 
@@ -83,7 +84,7 @@
                 </div>
 
                 <div class="card">
-                    <img src="./img/Zapatillas.jpg" alt="Pantalones">
+                    <img src="./img/Zapatillas.jpg" alt="Zapatillas">
                     <h2>Zapatillas</h2>
                     <a href="#">VER MAS</a>
                 </div>
