--- a/pages/envios.html
+++ b/pages/envios.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,80 +8,97 @@
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>VersaStyle</title>
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--* FAVICON -->
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+    <!--* KEYWORDS -->
+    <meta name="keywords"
+        content="ropa, remeras, pantalones, zapatillas, street, vestir, vestimenta, cloth, buenos aires, capital, caba, ciudad de buenos aires, versastyle, envios gratis">
+    <!--* DESCRIPTION -->
+    <!--* Entre 70 a 320 caracteres / 180 caracteres es lo justo (yo no sabia que poner toavia)-->
+    <meta name="description" content="">
+    <!--* PROTOCOLO OPEN GRAPH -->
+    <meta property="og:type" content="Web Site">
+    <meta property="og:title" content="VersaStyle - Envios a todo el pais">
+    <meta property="og:url" content="https://github.com/StefanoVRS/ProyectoCoder.git">
+    <!-- no tengo la imagen subida asi que lo pongo dese archivos por ahora -->
+    <meta property="og:image" content="file:///C:/Users/Stefi/Desktop/PROYECTO/img/apple-touch-icon.png">
+    <meta property="og:description" content="">
+    <title>VersaStyle - Envios a todo el pais</title>
 </head>
+
 <body>
-<!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">VersaStyle</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Mas
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../pages/envios.html">Envios</a></li>
-                            <li><a class="dropdown-item" href="../pages/usuario.html">Usuario</a></li>
-                            <li><a class="dropdown-item" href="../pages/acercade.html">Acerca De</a></li>
-                        </ul>
-                    </li>
-                </ul>
+    <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">VersaStyle</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Mas
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="../pages/envios.html">Envios</a></li>
+                                <li><a class="dropdown-item" href="../pages/usuario.html">Usuario</a></li>
+                                <li><a class="dropdown-item" href="../pages/acercade.html">Acerca De</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
-<!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+        </nav>
+    </header>
+    <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <main>
 
     </main>
+    <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+    <footer class="footer">
+        <div class="footerGridContenedor">
+            <nav class="footerMenu">
+                <h3>Categorias</h3>
+                <a href="#">Remeras</a>
+                <a href="#">Pantalones</a>
+                <a href="#">Zapatillas</a>
+            </nav>
+            <nav class="footerMenu">
+                <h3>Sobre nosotros</h3>
+                <a href="#">Nuestra Historia</a>
+                <a href="#">Mision, Vision y Valores</a>
+                <a href="#">Carreras</a>
+                <a href="#">Politicas de Privacida</a>
+                <a href="#">Terminos del Servicio</a>
+            </nav>
+            <nav class="footerMenu">
+                <h3>Soporte</h3>
+                <a href="#">Preguntas Frecuentes</a>
+                <a href="#">Ayuda en línea</a>
+                <a href="#">Confianza y Segurida</a>
+            </nav>
+        </div>
+        <div class="copy">
+            <p>Copyright 2023 © VersaStyle - Powered by Ecomerciar</p>
+        </div>
+    </footer>
+    <!-- ----------
 <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-<footer class="footer">
-    <div class="footerGridContenedor">
-        <nav class="footerMenu">
-            <h3>Categorias</h3>
-            <a href="#">Remeras</a>
-            <a href="#">Pantalones</a>
-            <a href="#">Zapatillas</a>
-        </nav>
-        <nav class="footerMenu">
-            <h3>Sobre nosotros</h3>
-            <a href="#">Nuestra Historia</a>
-            <a href="#">Mision, Vision y Valores</a>
-            <a href="#">Carreras</a>
-            <a href="#">Politicas de Privacida</a>
-            <a href="#">Terminos del Servicio</a>
-        </nav>
-        <nav class="footerMenu">
-            <h3>Soporte</h3>
-            <a href="#">Preguntas Frecuentes</a>
-            <a href="#">Ayuda en línea</a>
-            <a href="#">Confianza y Segurida</a>
-        </nav>
-    </div>
-    <div class="copy">
-        <p>Copyright 2023 © VersaStyle - Powered by Ecomerciar</p>
-    </div>
-</footer>
-<!-- ----------
-<!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-crossorigin="anonymous"></script>
-    </body>
-    </html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
