--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -8,7 +8,21 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>VersaStyle</title>
+        <!--* FAVICON -->
+        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+        <!--* KEYWORDS -->
+        <meta name="keywords" content="ropa, remeras, pantalones, zapatillas, street, vestir, vestimenta, cloth, buenos aires, capital, caba, ciudad de buenos aires, versastyle, envios gratis">
+        <!--* DESCRIPTION -->
+        <!--* Entre 70 a 320 caracteres / 180 caracteres es lo justo (yo no sabia que poner toavia)-->
+        <meta name="description" content="Registrate en VersaStyle para poder obtener descuentos en nuestra indumentaria con envios gratis a todo el pais!">
+        <!--* PROTOCOLO OPEN GRAPH -->
+        <meta property="og:type" content="Web Site">
+        <meta property="og:title" content="VersaStyle - Registrate">
+        <meta property="og:url" content="https://github.com/StefanoVRS/ProyectoCoder.git">
+            <!-- no tengo la imagen subida asi que lo pongo dese archivos por ahora -->
+        <meta property="og:image" content="file:///C:/Users/Stefi/Desktop/PROYECTO/img/apple-touch-icon.png"> 
+        <meta property="og:description" content="Registrate en VersaStyle para poder obtener descuentos en nuestra indumentaria con envios gratis a todo el pais!">
+    <title>VersaStyle - Registrate</title>
 </head>
 
 <body>
