--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--* FAVICON -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <!--* KEYWORDS -->
@@ -44,7 +43,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/blog.html">Blog</a>
+                            <a class="nav-link" href="./blog.html">Blog</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
@@ -52,9 +51,9 @@
                                 Mas
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/envios.html">Envios</a></li>
-                                <li><a class="dropdown-item" href="../pages/usuario.html">Usuario</a></li>
-                                <li><a class="dropdown-item" href="../pages/acercade.html">Acerca De</a></li>
+                                <li><a class="dropdown-item" href="./envios.html">Envios</a></li>
+                                <li><a class="dropdown-item" href="./usuario.html">Usuario</a></li>
+                                <li><a class="dropdown-item" href="./acercade.html">Acerca De</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -63,8 +62,24 @@
         </nav>
     </header>
     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-    <main>
-
+    <main class="acercade">
+        <section class="section1">
+            <section class="section2">
+                <h2 class="section2name">Nuestra historia</h2>
+                <p class="section2p">Hace varios años, un grupo de amigos apasionados por la moda decidió unirse para crear algo único y especial. Cansados de las marcas tradicionales y la presión por seguir las tendencias, querían construir una marca de ropa que celebrara la autenticidad y el estilo personal. Así nació VersaStyle.
+                Estos amigos, cada uno con sus habilidades y talentos individuales, comenzaron a trabajar incansablemente en su visión. Se embarcaron en un viaje emocionante de diseño, producción y creación de una marca que transmitiera los valores que tanto creían: la libertad de ser uno mismo y la capacidad de expresarse a través de la moda.
+                Lo primero que hicieron fue establecer una base sólida para su marca. Seleccionaron cuidadosamente los materiales de alta calidad y se asociaron con proveedores éticos que compartían sus valores. Querían asegurarse de que cada prenda fuera duradera y respetuosa con el medio ambiente, ya que la sostenibilidad también era un pilar importante en su enfoque.
+                A medida que avanzaban, se dieron cuenta de que VersaStyle no solo era una marca de ropa, sino una comunidad de personas apasionadas por el estilo auténtico y la individualidad. Decidieron crear una sección en su página web llamada "Estilo Inspirador" donde compartían historias de personas reales que encontraron su confianza y autenticidad a través de la moda. Estas historias abarcaban desde la mujer emprendedora que usaba prendas elegantes y cómodas en el trabajo hasta el artista que combinaba colores y texturas de manera única para expresar su creatividad.
+                VersaStyle también se comprometió a ofrecer una amplia variedad de estilos y tallas para satisfacer las necesidades de todos. Desde prendas clásicas y sofisticadas hasta diseños vanguardistas y atrevidos, su objetivo era que cada individuo se sintiera representado y cómodo en su ropa.
+                Con el tiempo, VersaStyle se convirtió en una marca reconocida y querida por su compromiso con la autenticidad y la diversidad. Las personas de todo el mundo se unieron a la comunidad, compartiendo sus propias historias y creando conexiones significativas a través de la moda.
+                Hoy en día, VersaStyle continúa inspirando a las personas a abrazar su estilo personal y a romper las barreras de la moda convencional. Su página web se ha convertido en un destino para aquellos que buscan prendas que reflejen su verdadero yo y se sientan como una segunda piel.
+                En resumen, la historia de VersaStyle es un testimonio del poder de la autenticidad y la creatividad en la moda. Es una marca que no solo ofrece ropa, sino también una plataforma para que las personas se expresen y se sientan empoderadas a través de su estilo único.
+                </p>
+            </section>
+            <section class="section3">
+                <img src="../img/" alt="imagen">
+            </section>
+        </section>
     </main>
     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <footer class="footer">
