--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,28 +2,28 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-                <!--* FAVICON -->
-                <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-                <!--* KEYWORDS -->
-                <meta name="keywords" content="ropa, remeras, pantalones, zapatillas, street, vestir, vestimenta, cloth, buenos aires, capital, caba, ciudad de buenos aires, versastyle, envios gratis">
-                <!--* DESCRIPTION -->
-                <!--* Entre 70 a 320 caracteres / 180 caracteres es lo justo (yo no sabia que poner toavia)-->
-                <meta name="description" content="Todos los tips para que puedas mantener nuestras prendas en su prime!">
-                <!--* PROTOCOLO OPEN GRAPH -->
-                <meta property="og:type" content="Web Site">
-                <meta property="og:title" content="VersaStyle - Blog">
-                <meta property="og:url" content="https://github.com/StefanoVRS/ProyectoCoder.git">
-                    <!-- no tengo la imagen subida asi que lo pongo dese archivos por ahora -->
-                <meta property="og:image" content="file:///C:/Users/Stefi/Desktop/PROYECTO/img/apple-touch-icon.png"> 
-                <meta property="og:description" content="Todos los tips para que puedas mantener nuestras prendas en su prime!">
-    <title>VersaStyle - Blog</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- <link rel="stylesheet" href="../css/style.css"> -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="../css/estilos.css">
+<!--* FAVICON -->
+<link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+<!--* KEYWORDS -->
+<meta name="keywords" content="ropa, remeras, pantalones, zapatillas, street, vestir, vestimenta, cloth, buenos aires, capital, caba, ciudad de buenos aires, versastyle, envios gratis">
+<!--* DESCRIPTION -->
+<!--* Entre 70 a 320 caracteres / 180 caracteres es lo justo (yo no sabia que poner toavia)-->
+<meta name="description" content="Todos los tips para que puedas mantener nuestras prendas en su prime!">
+<!--* PROTOCOLO OPEN GRAPH -->
+<meta property="og:type" content="Web Site">
+<meta property="og:title" content="VersaStyle - Blog">
+<meta property="og:url" content="https://github.com/StefanoVRS/ProyectoCoder.git">
+<!-- no tengo la imagen subida asi que lo pongo dese archivos por ahora -->
+<meta property="og:image" content="file:///C:/Users/Stefi/Desktop/PROYECTO/img/apple-touch-icon.png"> 
+<meta property="og:description" content="Todos los tips para que puedas mantener nuestras prendas en su prime!">
+<title>VersaStyle - Blog</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/blog.html">Blog</a>
+                            <a class="nav-link" href="./blog.html">Blog</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
@@ -51,9 +51,9 @@
                                 Mas
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/envios.html">Envios</a></li>
-                                <li><a class="dropdown-item" href="../pages/usuario.html">Usuario</a></li>
-                                <li><a class="dropdown-item" href="../pages/acercade.html">Acerca De</a></li>
+                                <li><a class="dropdown-item" href="./envios.html">Envios</a></li>
+                                <li><a class="dropdown-item" href="./usuario.html">Usuario</a></li>
+                                <li><a class="dropdown-item" href="./acercade.html">Acerca De</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -63,41 +63,6 @@
     </header>
     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <main class="blogFondo">
-
-        <section>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/Carrusel.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/carr1.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../img/carr2.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-
         <section class="contenedor">
             <h2 class="Titulo">Cuidado de prendas:</h2>
             <div class="contenedorContainer">
