--- a/pages/envios.html
+++ b/pages/envios.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--* FAVICON -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <!--* KEYWORDS -->
@@ -44,7 +43,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/blog.html">Blog</a>
+                            <a class="nav-link" href="./blog.html">Blog</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
@@ -52,9 +51,9 @@
                                 Mas
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/envios.html">Envios</a></li>
-                                <li><a class="dropdown-item" href="../pages/usuario.html">Usuario</a></li>
-                                <li><a class="dropdown-item" href="../pages/acercade.html">Acerca De</a></li>
+                                <li><a class="dropdown-item" href="./envios.html">Envios</a></li>
+                                <li><a class="dropdown-item" href="./usuario.html">Usuario</a></li>
+                                <li><a class="dropdown-item" href="./acercade.html">Acerca De</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -64,7 +63,23 @@
     </header>
     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <main>
+        <main class="envios">
+            <section class="section1">
+                <section class="section3">
+                    <img src="../img/envios.png" alt="imagen">
+                </section>
+                <section class="section2">
+                    <h2 class="section2name">Envios</h2>
+                    <p class="section2p">¡Hola! En nuestra página de internet, ofrecemos un servicio de envío eficiente y conveniente para que disfrutes de tus compras de ropa sin complicaciones. Nuestro sistema de envíos funciona de la siguiente manera: si te encuentras en la capital, los envíos son totalmente gratuitos, lo que significa que recibirás tus productos en la puerta de tu hogar sin costo adicional.
 
+                        Para nuestros clientes en provincia, el costo del envío varía según la distancia. Comenzamos con un precio base de 500 pesos, el cual se ajusta según la ubicación específica. Esto nos permite brindarte la flexibilidad de un envío rápido y seguro, adaptándonos a diferentes localidades.
+                        
+                        Nos esforzamos por garantizar que tus pedidos lleguen en perfectas condiciones y en el menor tiempo posible. Trabajamos con servicios de mensajería confiables y eficientes para asegurarnos de que tu experiencia de envío sea satisfactoria.
+                        
+                        Si tienes alguna pregunta adicional o deseas más información sobre nuestros envíos, no dudes en contactarnos. Estaremos encantados de ayudarte en todo lo que necesites. ¡Esperamos que disfrutes de tu experiencia de compra en nuestra página de internet y que recibas tus productos de forma rápida y conveniente!</p>
+                </section>
+            </section>
+        </main>
     </main>
     <!-- ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <footer class="footer">
