--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilos.css">
         <!--* FAVICON -->
         <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
         <!--* KEYWORDS -->
@@ -41,7 +41,7 @@
                             <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/blog.html">Blog</a>
+                            <a class="nav-link" href="./blog.html">Blog</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
@@ -49,9 +49,9 @@
                                 Mas
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/envios.html">Envios</a></li>
-                                <li><a class="dropdown-item" href="../pages/usuario.html">Usuario</a></li>
-                                <li><a class="dropdown-item" href="../pages/acercade.html">Acerca De</a></li>
+                                <li><a class="dropdown-item" href="./envios.html">Envios</a></li>
+                                <li><a class="dropdown-item" href="./usuario.html">Usuario</a></li>
+                                <li><a class="dropdown-item" href="./acercade.html">Acerca De</a></li>
                             </ul>
                         </li>
                     </ul>
